--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(255, 255, 255, 0.9); /* Fundo semitransparente */
+    background: rgba(255, 255, 255, 0.674); /* Fundo semitransparente */
     padding: 10px 20px; /* Espaçamento interno do cabeçalho */
     z-index: 1000; /* Mantém o cabeçalho acima de outros elementos */
 }
@@ -41,11 +41,11 @@ header {
 }
 
 .login-container {
-    margin: 20px auto; /* Centraliza a seção de login */
+    margin: -50px auto; /* Centraliza a seção de login */
     max-width: 300px; /* Largura máxima para a área de login */
-    padding: 20px; /* Espaçamento interno */
-    background-color: rgba(255, 255, 255, 0.9); /* Fundo semitransparente */
-    border-radius: 5px; /* Arredonda os cantos */
+    padding: 15px; /* Espaçamento interno */
+    background-color: rgba(255, 255, 255, 0.621); /* Fundo semitransparente */
+    border-radius: 10px; /* Arredonda os cantos */
     text-align: center; /* Alinha o texto ao centro */
     position: relative; /* Ajusta o posicionamento */
     z-index: 10; /* Garante que o login fique acima de outros elementos */
@@ -55,11 +55,11 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    margin-top: 20px; /* Adiciona espaço acima do conteúdo para não ficar atrás do cabeçalho fixo */
+    margin-top: 50px; /* Adiciona espaço acima do conteúdo para não ficar atrás do cabeçalho fixo */
 }
 
 .list {
-    background-color: #fff;
+    background-color: #ffffffc2;
     border-radius: 5px;
     width: 30%;
     padding: 10px;
@@ -84,10 +84,6 @@ button {
     font-size: 16px; /* Define o tamanho da fonte */
 }
 
-button:hover {
-    background-color: #6A5ACD; /* Cor do botão ao passar o mouse (opcional) */
-}
-
 footer {
     background-color: transparent; /* Remove o fundo branco */
     padding: 10px 20px;
@@ -106,7 +102,7 @@ footer {
 
 .developers-info {
     text-align: left;
-    max-width: 200px; /* Define a largura máxima para os desenvolvedores */
+    max-width: 500px; /* Define a largura máxima para os desenvolvedores e faculdade */
 }
 
 .comments-section {
@@ -117,16 +113,16 @@ footer {
 .comments {
     list-style-type: none; /* Remove os marcadores padrão */
     padding: 0;
-    margin: 5px 0 0; /* Margem acima dos comentários */
+    margin: 10px 0 0; /* Margem acima dos comentários */
 }
 
 .comments li {
     margin: 5px 0; /* Espaçamento entre os comentários */
-    font-size: 14px; /* Tamanho da fonte dos comentários */
+    font-size: 10px; /* Tamanho da fonte dos comentários */
 }
 
 .comments-section h4 {
-    font-size: 14px; /* Tamanho do cabeçalho de comentários */
+    font-size: 12px; /* Tamanho do cabeçalho de comentários */
     margin: 0; /* Remove margens para melhor alinhamento */
 }
 
