--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(270deg,rgba(222, 0, 75, 1) 0%, rgba(191, 70, 255, 1) 49%, rgba(0, 212, 255, 1) 100%);
+    background: linear-gradient(270deg,rgba(191, 70, 255, 1) 49%, rgba(0, 212, 255, 1) 100%);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     margin: 0; /* Remove margens padrão */
